Fix toasting overlap

--- a/src/pages/recite-passage/recite-passage.scss
+++ b/src/pages/recite-passage/recite-passage.scss
@@ -5,6 +5,7 @@ page-recite-passage {
 
   .scroll-content {
     padding: 16px;
+    margin-bottom: 130px;
   }
 
   .recite-passage {
